<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RulesAndRegulationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/user_store_one"
                android:textColor="#27339F"
                android:textSize="25sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_store_one1"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"/>

            <RadioButton
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_store_one2"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"/>


            <RadioButton
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_store_one3"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"/>

            <RadioButton
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_store_one4"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"/>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/savebutton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="SAVE"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/register_button"
                android:gravity="center"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>